<resources>
    <string name="app_name">Top Learners</string>
    <string name="tab_text_1">Learning Leaders</string>
    <string name="tab_text_2">Skill IQ Leaders</string>
    <string name="app_label">LEADERBOARD</string>
    <string name="submit">Submit</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="email_address">Email Address</string>
    <string name="project_on_github_link">Project on GITHUB(link)</string>
    <string name="button">Button</string>
    <string name="yes">Yes</string>
    <string name="are_you_sure">Are you sure ?</string>
    <string name="submission_successful">Submission Successful</string>
    <string name="project_submission">Project Submission</string>
    <string name="submission_not_successful">Submission not Successful</string>
</resources>